# prng

./: CMakeLists.txt  LICENSE.txt  README.md  chi.c  countx.c  cycle-statistics.c  freq.c  prng.c  prng.h  rngav.c
